feat: bump components versions